2001-03-09  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-auto-insert-image): New variable.
	(mew-mime-text/html-w3m): Bind 'w3m-display-inline-image' with
	'mew-w3m-auto-insert-image'.
	(mew-w3m-cid-retrieve): New function. Fix wrong guess.

2001-03-09  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-mode-map): Add `w3m-close-window',
	`w3m-view-source', `w3m-view-header', and `w3m-history'.  Keybind
	of `w3m-quit' is changed.
	(w3m-close-window, w3m-about-source, w3m-view-source,
	w3m-about-header, w3m-view-header, w3m-about-history,
	w3m-history): New functions.

	* mime-w3m.el (mime-put-keymap-region): Removed.
	(mime-w3m-save-background-color): Old name is
	`mime-save-background-color'.
	(mime-w3m-mode-map): Add workaround for `w3m-close-window',
	`w3m-view-source', `w3m-view-header', and `w3m-history'.

2001-03-09  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-cid-retrieve-function-alist): New variable.
	(w3m-retrieve): Add support for URLs which has `cid:' prefix.

	* mime-w3m.el: Always require `w3m'.
	Require `cl' when compiling.
	Set `w3m-cid-retrieve-function-alist'.
	(mime-w3m-message-structure): New variable.
	(mime-w3m-preview-text/html): Set `mime-w3m-message-structure'.
	(mime-w3m-cid-retrieve): New function.

2001-03-09  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-toggle-inline-images): Eliminated needless local
	variable.
	(toplevel): Encloses old emacs judgement with eval-and-compile;
	Define `find-coding-system' using `w3m-static-if'.

2001-03-08  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: All w3m-backlog-* symbols are renamed into w3m-cache-*,
	and coupling of retrieve module and cache module are cleand up.
	(w3m-keep-cache-size): Old name is `w3m-keep-backlog'.
	(w3m-cache-buffer, w3m-cache-articles, w3m-cache-hashtb,
	w3m-cache-setup, w3m-cache-shutdown, w3m-cache-contents,
	w3m-cache-request-contents): These symbols are renamed.